syntax = "proto3";
option go_package = "github.com/naufalihsan/msvc-common/api";

package api;

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (Order);
    rpc GetOrder(GetOrderRequest) returns (Order);
    rpc UpdateOrder(Order) returns (Order);
}

message Product {
    string id = 1;
    string name = 2;
    int32 quantity = 3;
    string priceId = 4;
}

message Order {
    string id = 1;
    string customerId = 2;
    string status = 3;
    repeated Product products = 4;
    string paymentLink = 5;
}

message OrderProduct {
    string productId = 1;
    int32 quantity = 2;
}

message CreateOrderRequest {
    string customerId = 1;
    repeated OrderProduct orderProducts = 2;
}

message GetOrderRequest {
    string customerId = 1;
    string orderId = 2;
}

service InventoryService {
    rpc Get(GetInventoryRequest) returns (GetInventoryResponse);
    rpc Validate(ValidateInventoryRequest) returns (ValidateInventoryResponse);
}

message GetInventoryRequest {
    repeated string ids = 1;
}

message GetInventoryResponse {
    repeated Product products = 1;
}

message ValidateInventoryRequest {
    repeated OrderProduct orderProducts = 1; 
}

message ValidateInventoryResponse {
    bool status = 1;
    repeated Product products = 2;
}